--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Assets/Paraphernalia"]
 	path = Assets/Paraphernalia
-	url = git@github.com:ShreveportArcade/Paraphernalia.git
+	url = https://github.com/GuitarTurtle/Paraphernalia.git
